--- a/Src/cmake-3.5.2/Utilities/cmliblzma/CMakeLists.txt
+++ b/Src/cmake-3.5.2/Utilities/cmliblzma/CMakeLists.txt
@@ -221,4 +221,6 @@ ELSEIF(CMAKE_C_COMPILER_ID STREQUAL "GNU" AND
   SET_PROPERTY(TARGET cmliblzma PROPERTY COMPILE_FLAGS "-O0")
 ENDIF()
 
+SET_PROPERTY(TARGET cmliblzma PROPERTY COMPILE_FLAGS "-std=c99")
+
 INSTALL(FILES COPYING DESTINATION ${CMAKE_DOC_DIR}/cmliblzma)
