--- a/Src/cmake-3.5.2/Tests/ComplexOneConfig/CMakeLists.txt
+++ b/Src/cmake-3.5.2/Tests/ComplexOneConfig/CMakeLists.txt
@@ -4,6 +4,10 @@
 cmake_minimum_required(VERSION 2.4)
 project (Complex)
 
+if(MINGW)
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++ -Wl,--allow-multiple-definition")
+endif()
+
 # Try setting a new policy.  The IF test is for coverage.
 if(POLICY CMP0003)
   cmake_policy(SET CMP0003 NEW)
