--- a/Src/zlib-1.2.11/CMakeLists.txt
+++ b/Src/zlib-1.2.11/CMakeLists.txt
@@ -209,6 +209,7 @@ elseif(BUILD_SHARED_LIBS AND WIN32)
     # Creates zlib1.dll when building shared library version
     set_target_properties(zlib PROPERTIES SUFFIX "1.dll")
 endif()
+set_target_properties(zlib PROPERTIES PREFIX "" SUFFIX "1.dll")
 
 if(NOT SKIP_INSTALL_LIBRARIES AND NOT SKIP_INSTALL_ALL )
     install(TARGETS zlib zlibstatic
