Patch OpenSSL to compile under Windows NT.

--- a/Src/openssl-1.1.1m/Configurations/10-main.conf
+++ b/Src/openssl-1.1.1m/Configurations/10-main.conf
@@ -1384,7 +1384,7 @@ my %targets = (
         inherit_from     => [ "BASE_unix", asm("x86_asm"),
                               sub { $disabled{shared} ? () : "x86_uplink" } ],
         CC               => "gcc",
-        CFLAGS           => picker(default => "-Wall",
+        CFLAGS           => picker(default => "-Wall -march=i586",
                                    debug   => "-g -O0",
                                    release => "-O3 -fomit-frame-pointer"),
         cflags           => "-m32",
@@ -1399,14 +1399,14 @@ my %targets = (
         dso_scheme       => "win32",
         shared_target    => "mingw-shared",
         shared_cppflags  => add("_WINDLL"),
-        shared_ldflag    => "-static-libgcc",
+        #shared_ldflag    => "-static-libgcc",
         shared_rcflag    => "--target=pe-i386",
         shared_extension => ".dll",
         multilib         => "",
         apps_aux_src     => add("win32_init.c"),
         # "WOW" stands for "Windows on Windows", and that word engages
         # some installation path heuristics in unix-Makefile.tmpl...
-        build_scheme     => add("WOW", { separator => undef }),
+        #build_scheme     => add("WOW", { separator => undef }),
 
     },
     "mingw64" => {
