--- a/Src/openssl-1.1.1m/Configurations/00-base-templates.conf
+++ b/Src/openssl-1.1.1m/Configurations/00-base-templates.conf
@@ -96,7 +96,7 @@ my %targets=(
         ex_libs         =>
             sub { !defined($disabled{zlib})
                   && defined($disabled{"zlib-dynamic"})
-                  ? "-lz" : () },
+                  ? "-lzlib.dll" : () },
         HASHBANGPERL    => "/usr/bin/env perl", # Only Unix actually cares
         RANLIB          => sub { which("$config{cross_compile_prefix}ranlib")
                                      ? "ranlib" : "" },
