Patched ncurses to compile under Windows NT.

--- a/Src/.gitignore
+++ b/Src/.gitignore
@@ -1,2 +1,155 @@
 /_build
 /zlib-1.2.11/zconf.h.included
+/ncurses-6.3/Makefile
+/ncurses-6.3/c++/Makefile
+/ncurses-6.3/config.log
+/ncurses-6.3/config.status
+/ncurses-6.3/edit_man.sh
+/ncurses-6.3/form/Makefile
+/ncurses-6.3/headers.sh
+/ncurses-6.3/include/MKterm.h.awk
+/ncurses-6.3/include/Makefile
+/ncurses-6.3/include/curses.head
+/ncurses-6.3/include/ncurses_cfg.h
+/ncurses-6.3/include/ncurses_dll.h
+/ncurses-6.3/include/termcap.h
+/ncurses-6.3/include/unctrl.h
+/ncurses-6.3/man/Makefile
+/ncurses-6.3/man/ncurses6-config.1
+/ncurses-6.3/menu/Makefile
+/ncurses-6.3/misc/Makefile
+/ncurses-6.3/misc/ncurses-config
+/ncurses-6.3/misc/run_tic.sh
+/ncurses-6.3/mk_shared_lib.sh
+/ncurses-6.3/ncurses/Makefile
+/ncurses-6.3/panel/Makefile
+/ncurses-6.3/progs/Makefile
+/ncurses-6.3/test/Makefile
+/ncurses-6.3/include/config.h
+/ncurses-6.3/include/curses.h
+/ncurses-6.3/include/hashsize.h
+/ncurses-6.3/include/ncurses_def.h
+/ncurses-6.3/include/parametrized.h
+/ncurses-6.3/include/term.h
+/ncurses-6.3/man/terminfo.5
+/ncurses-6.3/ncurses/codes.c
+/ncurses-6.3/ncurses/expanded.c
+/ncurses-6.3/ncurses/fallback.c
+/ncurses-6.3/ncurses/lib_gen.c
+/ncurses-6.3/conf1091.src
+/ncurses-6.3/confdefs.h
+/ncurses-6.3/conftest.cc
+/ncurses-6.3/lib/
+/ncurses-6.3/ncurses/comp_captab.c
+/ncurses-6.3/ncurses/comp_userdefs.c
+/ncurses-6.3/ncurses/init_keytry.h
+/ncurses-6.3/ncurses/keys.list
+/ncurses-6.3/ncurses/lib_keyname.c
+/ncurses-6.3/ncurses/link_test.c
+/ncurses-6.3/ncurses/make_hash.exe
+/ncurses-6.3/ncurses/make_keys.exe
+/ncurses-6.3/ncurses/names.c
+/ncurses-6.3/ncurses/report_offsets.exe
+/ncurses-6.3/ncurses/unctrl.c
+/ncurses-6.3/obj_g/
+/ncurses-6.3/objects/
+/ncurses-6.3/progs/termsort.h
+/ncurses-6.3/progs/transform.h
+/ncurses-6.3/man/ncursesw6-config.1
+/ncurses-6.3/c++/demo.exe
+/ncurses-6.3/c++/etip.h
+/ncurses-6.3/include/eti.h
+/ncurses-6.3/include/form.h
+/ncurses-6.3/include/menu.h
+/ncurses-6.3/include/mf_common.h
+/ncurses-6.3/include/panel.h
+/ncurses-6.3/misc/run_tic.sed
+/ncurses-6.3/misc/terminfo.tmp
+/ncurses-6.3/progs/clear.exe
+/ncurses-6.3/progs/infocmp.exe
+/ncurses-6.3/progs/tabs.exe
+/ncurses-6.3/progs/tic.exe
+/ncurses-6.3/progs/toe.exe
+/ncurses-6.3/progs/tput.exe
+/ncurses-6.3/progs/tset.exe
+/ncurses-6.3/test/back_ground.exe
+/ncurses-6.3/test/background.exe
+/ncurses-6.3/test/blue.exe
+/ncurses-6.3/test/bs.exe
+/ncurses-6.3/test/cardfile.exe
+/ncurses-6.3/test/chgat.exe
+/ncurses-6.3/test/clip_printw.exe
+/ncurses-6.3/test/color_content.exe
+/ncurses-6.3/test/color_set.exe
+/ncurses-6.3/test/demo_altkeys.exe
+/ncurses-6.3/test/demo_defkey.exe
+/ncurses-6.3/test/demo_forms.exe
+/ncurses-6.3/test/demo_keyok.exe
+/ncurses-6.3/test/demo_menus.exe
+/ncurses-6.3/test/demo_new_pair.exe
+/ncurses-6.3/test/demo_panels.exe
+/ncurses-6.3/test/demo_tabs.exe
+/ncurses-6.3/test/demo_termcap.exe
+/ncurses-6.3/test/demo_terminfo.exe
+/ncurses-6.3/test/ditto.exe
+/ncurses-6.3/test/dots.exe
+/ncurses-6.3/test/dots_curses.exe
+/ncurses-6.3/test/dots_mvcur.exe
+/ncurses-6.3/test/dots_termcap.exe
+/ncurses-6.3/test/dots_xcurses.exe
+/ncurses-6.3/test/dup_field.exe
+/ncurses-6.3/test/echochar.exe
+/ncurses-6.3/test/extended_color.exe
+/ncurses-6.3/test/filter.exe
+/ncurses-6.3/test/firework.exe
+/ncurses-6.3/test/firstlast.exe
+/ncurses-6.3/test/foldkeys.exe
+/ncurses-6.3/test/form_driver_w.exe
+/ncurses-6.3/test/gdc.exe
+/ncurses-6.3/test/hanoi.exe
+/ncurses-6.3/test/hashtest.exe
+/ncurses-6.3/test/inch_wide.exe
+/ncurses-6.3/test/inchs.exe
+/ncurses-6.3/test/ins_wide.exe
+/ncurses-6.3/test/insdelln.exe
+/ncurses-6.3/test/inserts.exe
+/ncurses-6.3/test/key_names.exe
+/ncurses-6.3/test/keynames.exe
+/ncurses-6.3/test/knight.exe
+/ncurses-6.3/test/list_keys.exe
+/ncurses-6.3/test/lrtest.exe
+/ncurses-6.3/test/move_field.exe
+/ncurses-6.3/test/movewindow.exe
+/ncurses-6.3/test/ncurses.exe
+/ncurses-6.3/test/newdemo.exe
+/ncurses-6.3/test/padview.exe
+/ncurses-6.3/test/pair_content.exe
+/ncurses-6.3/test/picsmap.exe
+/ncurses-6.3/test/railroad.exe
+/ncurses-6.3/test/rain.exe
+/ncurses-6.3/test/redraw.exe
+/ncurses-6.3/test/savescreen.exe
+/ncurses-6.3/test/sp_tinfo.exe
+/ncurses-6.3/test/tclock.exe
+/ncurses-6.3/test/test_add_wchstr.exe
+/ncurses-6.3/test/test_addchstr.exe
+/ncurses-6.3/test/test_addstr.exe
+/ncurses-6.3/test/test_addwstr.exe
+/ncurses-6.3/test/test_arrays.exe
+/ncurses-6.3/test/test_get_wstr.exe
+/ncurses-6.3/test/test_getstr.exe
+/ncurses-6.3/test/test_instr.exe
+/ncurses-6.3/test/test_inwstr.exe
+/ncurses-6.3/test/test_opaque.exe
+/ncurses-6.3/test/test_setupterm.exe
+/ncurses-6.3/test/test_sgr.exe
+/ncurses-6.3/test/test_termattrs.exe
+/ncurses-6.3/test/test_tparm.exe
+/ncurses-6.3/test/test_vid_puts.exe
+/ncurses-6.3/test/test_vidputs.exe
+/ncurses-6.3/test/testaddch.exe
+/ncurses-6.3/test/testcurs.exe
+/ncurses-6.3/test/testscanw.exe
+/ncurses-6.3/test/view.exe
+/ncurses-6.3/test/worm.exe
+/ncurses-6.3/test/xmas.exe
