Started to patch Less to work under Windows NT.

--- a/Src/.gitignore
+++ b/Src/.gitignore
@@ -154,3 +154,15 @@
 /ncurses-6.3/test/view.exe
 /ncurses-6.3/test/worm.exe
 /ncurses-6.3/test/xmas.exe
+/less-590/conf1454.dir
+/less-590/conf55.dir
+/less-590/config.log
+/less-590/confdefs.h
+/less-590/conftest.c
+/less-590/conftest.err
+/less-590/conftest.exe
+/less-590/Makefile
+/less-590/config.status
+/less-590/defines.h
+/less-590/main.o
+/less-590/stamp-h
