More patching for Less (and dependencies).

--- a/Src/.gitignore
+++ b/Src/.gitignore
@@ -154,8 +154,7 @@
 /ncurses-6.3/test/view.exe
 /ncurses-6.3/test/worm.exe
 /ncurses-6.3/test/xmas.exe
-/less-590/conf1454.dir
-/less-590/conf55.dir
+/less-590/conf*.dir
 /less-590/config.log
 /less-590/confdefs.h
 /less-590/conftest.c
@@ -166,3 +165,42 @@
 /less-590/defines.h
 /less-590/main.o
 /less-590/stamp-h
+/less-590/brac.o
+/less-590/ch.o
+/less-590/charset.o
+/less-590/cmdbuf.o
+/less-590/command.o
+/less-590/cvt.o
+/less-590/decode.o
+/less-590/edit.o
+/less-590/filename.o
+/less-590/forwback.o
+/less-590/help.o
+/less-590/ifile.o
+/less-590/input.o
+/less-590/jump.o
+/less-590/less.exe
+/less-590/lessecho.exe
+/less-590/lessecho.o
+/less-590/lesskey.exe
+/less-590/lesskey.o
+/less-590/lesskey_parse.o
+/less-590/line.o
+/less-590/linenum.o
+/less-590/lsystem.o
+/less-590/mark.o
+/less-590/optfunc.o
+/less-590/option.o
+/less-590/opttbl.o
+/less-590/os.o
+/less-590/output.o
+/less-590/pattern.o
+/less-590/position.o
+/less-590/prompt.o
+/less-590/screen.o
+/less-590/search.o
+/less-590/signal.o
+/less-590/tags.o
+/less-590/ttyin.o
+/less-590/version.o
+/less-590/xbuf.o
