Working more to patch ncurses.

--- a/Src/ncurses-6.3/Makefile.in
+++ b/Src/ncurses-6.3/Makefile.in
@@ -53,7 +53,7 @@ exec_prefix	= @exec_prefix@
 datarootdir	= @datarootdir@
 
 bindir		= @bindir@
-ticdir		= @TERMINFO@
+ticdir		= _terminfo_
 includedir	= @includedir@
 includesubdir	= @includesubdir@
 libdir		= @libdir@
