--- a/Src/.gitignore
+++ b/Src/.gitignore
@@ -1,6 +1,10 @@
 /_build
 /_diff
 /zlib-1.2.11/zconf.h.included
+/ncurses-6.3/conf*.src
+/ncurses-6.3/conftest.c
+/ncurses-6.3/conftest.err
+/ncurses-6.3/conftest.exe
 /ncurses-6.3/Makefile
 /ncurses-6.3/c++/Makefile
 /ncurses-6.3/config.log
@@ -154,6 +158,9 @@
 /ncurses-6.3/test/view.exe
 /ncurses-6.3/test/worm.exe
 /ncurses-6.3/test/xmas.exe
+/ncurses-6.3/misc/tabset/_tabset_
+/ncurses-6.3/misc/_terminfo_
+/ncurses-6.3/misc/_tabset_
 /less-590/conf*.dir
 /less-590/config.log
 /less-590/confdefs.h
