--- a/Src/ncurses-6.3/misc/run_tic.in
+++ b/Src/ncurses-6.3/misc/run_tic.in
@@ -52,7 +52,7 @@ echo "** Building terminfo database, please wait..."
 : ${datarootdir:=@datarootdir@}
 : ${datadir:=@datadir@}
 : ${TIC_PATH:=@TIC@}
-: ${ticdir:=@TERMINFO@}
+: ${ticdir:=_terminfo_}
 : ${source:=@TERMINFO_SRC@}
 : ${LN_S:="@LN_S@"}
 : ${cross_compiling:=no}
