Patch bzip2 to work under Windows NT.

--- a/Src/.gitignore
+++ b/Src/.gitignore
@@ -1,6 +1,29 @@
 /_build
 /_diff
 /zlib-1.2.11/zconf.h.included
+/bzip2-1.0.8/blocksort.o
+/bzip2-1.0.8/bzip2.exe
+/bzip2-1.0.8/bzip2.o
+/bzip2-1.0.8/bzip2recover.exe
+/bzip2-1.0.8/bzip2recover.o
+/bzip2-1.0.8/bzlib.o
+/bzip2-1.0.8/compress.o
+/bzip2-1.0.8/crctable.o
+/bzip2-1.0.8/decompress.o
+/bzip2-1.0.8/huffman.o
+/bzip2-1.0.8/libbz2.a
+/bzip2-1.0.8/randtable.o
+/bzip2-1.0.8/sample1.rb2
+/bzip2-1.0.8/sample1.tst
+/bzip2-1.0.8/sample2.rb2
+/bzip2-1.0.8/sample2.tst
+/bzip2-1.0.8/sample3.rb2
+/bzip2-1.0.8/sample3.tst
+/bzip2-1.0.8/bzip2-shared.exe
+/bzip2-1.0.8/libbz2.so.1.0
+/bzip2-1.0.8/libbz2.so.1.0.8
+/bzip2-1.0.8/bzip2.dll
+/bzip2-1.0.8/bzip2.dll.a
 /ncurses-6.3/conf*.src
 /ncurses-6.3/conftest.c
 /ncurses-6.3/conftest.err
