Patch libiconv to work under Windows NT.

--- a/Src/.gitignore
+++ b/Src/.gitignore
@@ -236,3 +236,116 @@
 /less-590/ttyin.o
 /less-590/version.o
 /less-590/xbuf.o
+/libiconv-1.16/Makefile
+/libiconv-1.16/config.h
+/libiconv-1.16/config.log
+/libiconv-1.16/config.status
+/libiconv-1.16/include/iconv.h
+/libiconv-1.16/include/iconv.h.inst
+/libiconv-1.16/lib/Makefile
+/libiconv-1.16/lib/config.h
+/libiconv-1.16/lib/stamp-h2
+/libiconv-1.16/libcharset/Makefile
+/libiconv-1.16/libcharset/config.h
+/libiconv-1.16/libcharset/config.log
+/libiconv-1.16/libcharset/config.status
+/libiconv-1.16/libcharset/include/libcharset.h
+/libiconv-1.16/libcharset/include/localcharset.h
+/libiconv-1.16/libcharset/include/localcharset.h.inst
+/libiconv-1.16/libcharset/lib/Makefile
+/libiconv-1.16/libcharset/libtool
+/libiconv-1.16/libtool
+/libiconv-1.16/man/Makefile
+/libiconv-1.16/po/Makefile
+/libiconv-1.16/po/Makefile.in
+/libiconv-1.16/po/POTFILES
+/libiconv-1.16/src/Makefile
+/libiconv-1.16/srclib/Makefile
+/libiconv-1.16/stamp-h1
+/libiconv-1.16/tests/Makefile
+/libiconv-1.16/lib/libcharset.a
+/libiconv-1.16/lib/libcharset.h
+/libiconv-1.16/lib/libcharset.la
+/libiconv-1.16/lib/libcharset.so
+/libiconv-1.16/lib/libcharset.so.1
+/libiconv-1.16/lib/libcharset.so.1.0.0
+/libiconv-1.16/lib/localcharset.h
+/libiconv-1.16/libcharset/lib/.libs/
+/libiconv-1.16/libcharset/lib/libcharset.la
+/libiconv-1.16/libcharset/lib/localcharset.lo
+/libiconv-1.16/libcharset/lib/localcharset.o
+/libiconv-1.16/libcharset/lib/relocatable-stub.lo
+/libiconv-1.16/libcharset/lib/relocatable-stub.o
+/libiconv-1.16/lib/.libs/
+/libiconv-1.16/lib/iconv.lo
+/libiconv-1.16/lib/libiconv.la
+/libiconv-1.16/lib/localcharset.lo
+/libiconv-1.16/lib/relocatable.lo
+/libiconv-1.16/src/.libs/
+/libiconv-1.16/src/iconv.o
+/libiconv-1.16/src/iconv_no_i18n.exe
+/libiconv-1.16/src/iconv_no_i18n.o
+/libiconv-1.16/srclib/alloca.h
+/libiconv-1.16/srclib/allocator.o
+/libiconv-1.16/srclib/areadlink.o
+/libiconv-1.16/srclib/basename-lgpl.o
+/libiconv-1.16/srclib/binary-io.o
+/libiconv-1.16/srclib/canonicalize-lgpl.o
+/libiconv-1.16/srclib/careadlinkat.o
+/libiconv-1.16/srclib/dirname-lgpl.o
+/libiconv-1.16/srclib/errno.h
+/libiconv-1.16/srclib/error.o
+/libiconv-1.16/srclib/fcntl.h
+/libiconv-1.16/srclib/getprogname.o
+/libiconv-1.16/srclib/libicrt.a
+/libiconv-1.16/srclib/limits.h
+/libiconv-1.16/srclib/malloc.o
+/libiconv-1.16/srclib/malloca.o
+/libiconv-1.16/srclib/progname.o
+/libiconv-1.16/srclib/raise.o
+/libiconv-1.16/srclib/readlink.o
+/libiconv-1.16/srclib/safe-read.o
+/libiconv-1.16/srclib/signal.h
+/libiconv-1.16/srclib/sigprocmask.o
+/libiconv-1.16/srclib/stat-time.o
+/libiconv-1.16/srclib/stdint.h
+/libiconv-1.16/srclib/stdio-write.o
+/libiconv-1.16/srclib/stdio.h
+/libiconv-1.16/srclib/stdlib.h
+/libiconv-1.16/srclib/strerror-override.o
+/libiconv-1.16/srclib/strerror.o
+/libiconv-1.16/srclib/string.h
+/libiconv-1.16/srclib/stripslash.o
+/libiconv-1.16/srclib/sys/
+/libiconv-1.16/srclib/time.h
+/libiconv-1.16/srclib/unistd.h
+/libiconv-1.16/srclib/unistd.o
+/libiconv-1.16/srclib/unitypes.h
+/libiconv-1.16/srclib/uniwidth.h
+/libiconv-1.16/srclib/uniwidth/.dirstamp
+/libiconv-1.16/srclib/uniwidth/width.o
+/libiconv-1.16/srclib/xmalloc.o
+/libiconv-1.16/srclib/xreadlink.o
+/libiconv-1.16/srclib/xstrdup.o
+/libiconv-1.16/bin/
+/libiconv-1.16/lib/iconv-exports.lo
+/libiconv-1.16/lib/libcharset.dll.a
+/libiconv-1.16/lib/libiconv.res.lo
+/libiconv-1.16/src/iconv.res
+/libiconv-1.16/srclib/stat-w32.o
+/libiconv-1.16/srclib/stat.o
+/libiconv-1.16/lib/charset.dll
+/libiconv-1.16/lib/iconv-exports.o
+/libiconv-1.16/lib/iconv.o
+/libiconv-1.16/lib/libiconv.res.o
+/libiconv-1.16/lib/localcharset.o
+/libiconv-1.16/lib/relocatable.o
+/libiconv-1.16/src/iconv.exe
+/libiconv-1.16/lib/libiconv.def
+/libiconv-1.16/libcharset/lib/libcharset.def
+/libiconv-1.16/confdefs.h
+/libiconv-1.16/conftest.c
+/libiconv-1.16/conftest.err
+/libiconv-1.16/conftest*
+/libiconv-1.16/lib/libiconv.dll.a
+/libiconv-1.16/libcharset/lib/libcharset.dll.a
