--- a/Src/libiconv-1.16/libcharset/Makefile.devel
+++ b/Src/libiconv-1.16/libcharset/Makefile.devel
@@ -1,7 +1,7 @@
 # This is the developer's makefile, not the user's makefile.
 # Don't use it unless you know exactly what you do!
 
-SHELL = /bin/sh
+SHELL = sh
 MAKE = make
 AUTOCONF = autoconf-2.69
 AUTOHEADER = autoheader-2.69
