--- a/Src/libiconv-1.16/lib/Makefile.in
+++ b/Src/libiconv-1.16/lib/Makefile.in
@@ -15,14 +15,14 @@ libdir = @libdir@
 CC = @CC@
 CFLAGS = @CFLAGS@ @CFLAG_VISIBILITY@
 CPPFLAGS = @CPPFLAGS@
-LDFLAGS = @LDFLAGS@ $(LDFLAGS_@WOE32DLL@)
+LDFLAGS = @LDFLAGS@ $(LDFLAGS_@WOE32DLL@) -Wl,--out-implib=libiconv.dll.a -Wl,--output-def=libiconv.def
 LDFLAGS_yes = -Wl,--export-all-symbols
 LDFLAGS_no =
 INCLUDES = -I. -I$(srcdir) -I../include -I$(srcdir)/../include -I.. -I$(srcdir)/..
 # -DBUILDING_LIBICONV: Change expansion of LIBICONV_DLL_EXPORTED macro.
 # -DBUILDING_DLL: Change expansion of RELOCATABLE_DLL_EXPORTED macro.
-DEFS = -DLIBDIR=\"$(libdir)\" -DBUILDING_LIBICONV -DBUILDING_DLL \
--DENABLE_RELOCATABLE=1 -DIN_LIBRARY -DINSTALLDIR=\"$(libdir)\" -DNO_XMALLOC \
+DEFS = -DLIBDIR=$(libdir) -DBUILDING_LIBICONV -DBUILDING_DLL \
+-DENABLE_RELOCATABLE=1 -DIN_LIBRARY -DINSTALLDIR=$(libdir) -DNO_XMALLOC \
 -Dset_relocation_prefix=libiconv_set_relocation_prefix \
 -Drelocate=libiconv_relocate -Drelocate2=libiconv_relocate2 @DEFS@
 LIBTOOL = @LIBTOOL@
