--- a/Src/libiconv-1.16/libcharset/lib/Makefile.in
+++ b/Src/libiconv-1.16/libcharset/lib/Makefile.in
@@ -15,7 +15,7 @@ libdir = @libdir@
 CC = @CC@
 CFLAGS = @CFLAGS@ @CFLAG_VISIBILITY@
 CPPFLAGS = @CPPFLAGS@
-LDFLAGS = @LDFLAGS@
+LDFLAGS = @LDFLAGS@ -Wl,--out-implib=libcharset.dll.a -Wl,--output-def=libcharset.def
 INCLUDES = -I. -I$(srcdir) -I.. -I$(srcdir)/.. -I../include
 # -DBUILDING_LIBCHARSET: Change expansion of LIBCHARSET_DLL_EXPORTED macro.
 DEFS = -DBUILDING_LIBCHARSET @DEFS@
