--- a/Src/git-2.34.1/contrib/buildsystems/CMakeLists.txt
+++ b/Src/git-2.34.1/contrib/buildsystems/CMakeLists.txt
@@ -265,7 +265,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 				_CONSOLE STRIP_EXTENSION=".exe"  NO_SYMLINK_HEAD UNRELIABLE_FSTAT #DETECT_MSYS_TTY
 				NOGDI OBJECT_CREATION_MODE=1 __USE_LARGEFILE64=1 _LARGEFILE64_SOURCE=1 #__USE_MINGW_ANSI_STDIO=0
 				USE_NED_ALLOCATOR OVERRIDE_STRDUP MMAP_PREVENTS_DELETE USE_WIN32_MMAP
-				UNICODE _UNICODE ENSURE_MSYSTEM_IS_SET NO_PTHREADS NO_INET_NTOP) #HAVE_WPGMPTR
+				UNICODE _UNICODE ENSURE_MSYSTEM_IS_SET NO_INET_NTOP) #HAVE_WPGMPTR
 	list(APPEND compat_SOURCES compat/mingw.c compat/winansi.c compat/win32/path-utils.c
 		compat/win32/pthread.c compat/win32mmap.c compat/win32/syslog.c
 		compat/win32/trace2_win32_process_info.c compat/win32/dirent.c
