--- a/Src/openssl-1.1.1m/Configurations/10-main.conf
+++ b/Src/openssl-1.1.1m/Configurations/10-main.conf
@@ -1392,7 +1392,7 @@ my %targets = (
                                     threads("-D_MT")),
         lib_cppflags     => "-DL_ENDIAN",
         sys_id           => "MINGW32",
-        ex_libs          => add("-lws2_32 -lgdi32 -lcrypt32"),
+        ex_libs          => add("-lntcompat.dll -lws2_32 -lgdi32 -lcrypt32"),
         bn_ops           => "BN_LLONG EXPORT_VAR_AS_FN",
         thread_scheme    => "winthreads",
         perlasm_scheme   => "coff",
@@ -1428,7 +1428,7 @@ my %targets = (
                                     threads("-D_MT")),
         lib_cppflags     => "-DL_ENDIAN",
         sys_id           => "MINGW64",
-        ex_libs          => add("-lws2_32 -lgdi32 -lcrypt32"),
+        ex_libs          => add("-lntcompat.dll -lws2_32 -lgdi32 -lcrypt32"),
         bn_ops           => "SIXTY_FOUR_BIT EXPORT_VAR_AS_FN",
         thread_scheme    => "winthreads",
         perlasm_scheme   => "mingw64",
