--- a/Src/curl-7.80.0/lib/CMakeLists.txt
+++ b/Src/curl-7.80.0/lib/CMakeLists.txt
@@ -75,6 +75,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../_ntcompat)
+link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../_ntcompat)
 if(USE_ARES)
   include_directories(${CARES_INCLUDE_DIR})
 endif()
@@ -93,7 +95,7 @@ if(NOT BUILD_SHARED_LIBS)
     set_target_properties(${LIB_NAME} PROPERTIES INTERFACE_COMPILE_DEFINITIONS CURL_STATICLIB)
 endif()
 
-target_link_libraries(${LIB_NAME} ${CURL_LIBS})
+target_link_libraries(${LIB_NAME} -lntcompat.dll ${CURL_LIBS})
 
 if(WIN32)
   add_definitions(-D_USRDLL)
