Patch PuTTY to work under Windows NT.

--- a/Src/.gitignore
+++ b/Src/.gitignore
@@ -349,3 +349,183 @@
 /libiconv-1.16/conftest*
 /libiconv-1.16/lib/libiconv.dll.a
 /libiconv-1.16/libcharset/lib/libcharset.dll.a
+/putty-0.76/windows/agentf.o
+/putty-0.76/windows/aqsync.o
+/putty-0.76/windows/be_all_s.o
+/putty-0.76/windows/be_misc.o
+/putty-0.76/windows/be_ssh.o
+/putty-0.76/windows/callback.o
+/putty-0.76/windows/clicons.o
+/putty-0.76/windows/cmdline.o
+/putty-0.76/windows/conf.o
+/putty-0.76/windows/config.o
+/putty-0.76/windows/console.o
+/putty-0.76/windows/cproxy.o
+/putty-0.76/windows/dialog.o
+/putty-0.76/windows/ecc.o
+/putty-0.76/windows/errsock.o
+/putty-0.76/windows/ldisc.o
+/putty-0.76/windows/logging.o
+/putty-0.76/windows/mainchan.o
+/putty-0.76/windows/marshal.o
+/putty-0.76/windows/memory.o
+/putty-0.76/windows/minibidi.o
+/putty-0.76/windows/misc.o
+/putty-0.76/windows/miscucs.o
+/putty-0.76/windows/mpint.o
+/putty-0.76/windows/nocproxy.o
+/putty-0.76/windows/norand.o
+/putty-0.76/windows/noterm.o
+/putty-0.76/windows/nullplug.o
+/putty-0.76/windows/pageant.map
+/putty-0.76/windows/pageant.o
+/putty-0.76/windows/pageant.res.o
+/putty-0.76/windows/pgssapi.o
+/putty-0.76/windows/pinger.o
+/putty-0.76/windows/plink.map
+/putty-0.76/windows/plink.res.o
+/putty-0.76/windows/portfwd.o
+/putty-0.76/windows/proxy.o
+/putty-0.76/windows/pscp.map
+/putty-0.76/windows/pscp.o
+/putty-0.76/windows/pscp.res.o
+/putty-0.76/windows/psftp.map
+/putty-0.76/windows/psftp.o
+/putty-0.76/windows/psftp.res.o
+/putty-0.76/windows/psftpcommon.o
+/putty-0.76/windows/psocks.o
+/putty-0.76/windows/putty.res.o
+/putty-0.76/windows/raw.o
+/putty-0.76/windows/rlogin.o
+/putty-0.76/windows/sessprep.o
+/putty-0.76/windows/settings.o
+/putty-0.76/windows/sftp.o
+/putty-0.76/windows/sftpcommon.o
+/putty-0.76/windows/sizetip.o
+/putty-0.76/windows/ssh.o
+/putty-0.76/windows/ssh1bpp.o
+/putty-0.76/windows/ssh1censor.o
+/putty-0.76/windows/ssh1connection-client.o
+/putty-0.76/windows/ssh1connection.o
+/putty-0.76/windows/ssh1login.o
+/putty-0.76/windows/ssh2bpp-bare.o
+/putty-0.76/windows/ssh2bpp.o
+/putty-0.76/windows/ssh2censor.o
+/putty-0.76/windows/ssh2connection-client.o
+/putty-0.76/windows/ssh2connection.o
+/putty-0.76/windows/ssh2kex-client.o
+/putty-0.76/windows/ssh2transhk.o
+/putty-0.76/windows/ssh2transport.o
+/putty-0.76/windows/ssh2userauth.o
+/putty-0.76/windows/sshaes.o
+/putty-0.76/windows/ssharcf.o
+/putty-0.76/windows/sshargon2.o
+/putty-0.76/windows/sshauxcrypt.o
+/putty-0.76/windows/sshblake2.o
+/putty-0.76/windows/sshblowf.o
+/putty-0.76/windows/sshccp.o
+/putty-0.76/windows/sshcommon.o
+/putty-0.76/windows/sshcrc.o
+/putty-0.76/windows/sshcrcda.o
+/putty-0.76/windows/sshdes.o
+/putty-0.76/windows/sshdh.o
+/putty-0.76/windows/sshdss.o
+/putty-0.76/windows/sshecc.o
+/putty-0.76/windows/sshgssc.o
+/putty-0.76/windows/sshhmac.o
+/putty-0.76/windows/sshmac.o
+/putty-0.76/windows/sshmd5.o
+/putty-0.76/windows/sshprng.o
+/putty-0.76/windows/sshpubk.o
+/putty-0.76/windows/sshrand.o
+/putty-0.76/windows/sshrsa.o
+/putty-0.76/windows/sshsh256.o
+/putty-0.76/windows/sshsh512.o
+/putty-0.76/windows/sshsha.o
+/putty-0.76/windows/sshsha3.o
+/putty-0.76/windows/sshshare.o
+/putty-0.76/windows/sshutils.o
+/putty-0.76/windows/sshverstring.o
+/putty-0.76/windows/sshzlib.o
+/putty-0.76/windows/stripctrl.o
+/putty-0.76/windows/supdup.o
+/putty-0.76/windows/telnet.o
+/putty-0.76/windows/terminal.o
+/putty-0.76/windows/time.o
+/putty-0.76/windows/timing.o
+/putty-0.76/windows/tree234.o
+/putty-0.76/windows/utils.o
+/putty-0.76/windows/version.o
+/putty-0.76/windows/wcwidth.o
+/putty-0.76/windows/wildcard.o
+/putty-0.76/windows/wincapi.o
+/putty-0.76/windows/wincfg.o
+/putty-0.76/windows/wincliloop.o
+/putty-0.76/windows/wincons.o
+/putty-0.76/windows/winctrls.o
+/putty-0.76/windows/windefs.o
+/putty-0.76/windows/windlg.o
+/putty-0.76/windows/wingss.o
+/putty-0.76/windows/winhandl.o
+/putty-0.76/windows/winhelp.o
+/putty-0.76/windows/winhsock.o
+/putty-0.76/windows/winjump.o
+/putty-0.76/windows/winmisc.o
+/putty-0.76/windows/winmiscs.o
+/putty-0.76/windows/winnet.o
+/putty-0.76/windows/winnohlp.o
+/putty-0.76/windows/winnoise.o
+/putty-0.76/windows/winnojmp.o
+/putty-0.76/windows/winnpc.o
+/putty-0.76/windows/winnps.o
+/putty-0.76/windows/winpgnt.o
+/putty-0.76/windows/winpgntc.o
+/putty-0.76/windows/winplink.o
+/putty-0.76/windows/winproxy.o
+/putty-0.76/windows/winsecur.o
+/putty-0.76/windows/winselcli.o
+/putty-0.76/windows/winselgui.o
+/putty-0.76/windows/winser.o
+/putty-0.76/windows/winsftp.o
+/putty-0.76/windows/winshare.o
+/putty-0.76/windows/winsocks.o
+/putty-0.76/windows/winstore.o
+/putty-0.76/windows/wintime.o
+/putty-0.76/windows/winucs.o
+/putty-0.76/windows/winutils.o
+/putty-0.76/windows/winx11.o
+/putty-0.76/windows/x11fwd.o
+/putty-0.76/windows/be_nos_s.o
+/putty-0.76/windows/import.o
+/putty-0.76/windows/millerrabin.o
+/putty-0.76/windows/mpunsafe.o
+/putty-0.76/windows/nogss.o
+/putty-0.76/windows/notiming.o
+/putty-0.76/windows/pageant.exe
+/putty-0.76/windows/plink.exe
+/putty-0.76/windows/pockle.o
+/putty-0.76/windows/primecandidate.o
+/putty-0.76/windows/pscp.exe
+/putty-0.76/windows/psftp.exe
+/putty-0.76/windows/psocks.exe
+/putty-0.76/windows/psocks.map
+/putty-0.76/windows/putty.exe
+/putty-0.76/windows/putty.map
+/putty-0.76/windows/puttygen.exe
+/putty-0.76/windows/puttygen.map
+/putty-0.76/windows/puttygen.res.o
+/putty-0.76/windows/puttytel.exe
+/putty-0.76/windows/puttytel.map
+/putty-0.76/windows/puttytel.res.o
+/putty-0.76/windows/smallprimes.o
+/putty-0.76/windows/sshbcrypt.o
+/putty-0.76/windows/sshdssg.o
+/putty-0.76/windows/sshecdsag.o
+/putty-0.76/windows/sshprime.o
+/putty-0.76/windows/sshrsag.o
+/putty-0.76/windows/testcrypt.exe
+/putty-0.76/windows/testcrypt.map
+/putty-0.76/windows/testcrypt.o
+/putty-0.76/windows/window.o
+/putty-0.76/windows/winpgen.o
+/putty-0.76/windows/winprint.o
