--- a/Src/putty-0.76/windows/Makefile.mgw
+++ b/Src/putty-0.76/windows/Makefile.mgw
@@ -100,10 +100,13 @@ RC = $(TOOLPATH)windres
 # You may also need to tell windres where to find include files:
 # RCINC = --include-dir c:\cygwin\include\
 
+COMPAT = -DWINSOCK_TWO -DNO_HTMLHELP -DNO_MANIFESTS -DNO_GSSAPI -DNO_MULTIMON -DNO_SECUREZEROMEMORY
+
 CFLAGS = -Wall -O2 -std=gnu99 -Wvla -D_WINDOWS -DWIN32S_COMPAT \
-		-D_NO_OLDNAMES -D__USE_MINGW_ANSI_STDIO=1 -I.././ \
-		-I../charset/ -I../windows/ -I../unix/
-LDFLAGS = -s
+		-D_NO_OLDNAMES -D__USE_MINGW_ANSI_STDIO=1 -I.././ -I../../_ntcompat \
+		-I../charset/ -I../windows/ -I../unix/ -fno-ident -fno-stack-protector \
+		-fno-unwind-tables -fno-asynchronous-unwind-tables -march=i586
+LDFLAGS = -Wl,-s -Wl,--build-id=none
 RCFLAGS = $(RCINC) --define WIN32=1 --define _WIN32=1 --define WINVER=0x0400 \
 		-I.././ -I../charset/ -I../windows/ -I../unix/
 
@@ -111,7 +114,7 @@ RCFLAGS = $(RCINC) --define WIN32=1 --define _WIN32=1 --define WINVER=0x0400 \
 # systems with IE5+ installed, such as some arguments to SHGetFolderPath().
 # WINVER etc perform a similar function for FlashWindowEx().
 CFLAGS += -D_WIN32_IE=0x0500
-CFLAGS += -DWINVER=0x0500 -D_WIN32_WINDOWS=0x0410 -D_WIN32_WINNT=0x0500
+CFLAGS += -DWINVER=0x0400 -D_WIN32_WINDOWS=0x0400 -D_WIN32_WINNT=0x0400
 
 .SUFFIXES:
 
@@ -136,7 +139,7 @@ pageant.exe: aqsync.o be_misc.o callback.o conf.o ecc.o errsock.o marshal.o \
 		winhsock.o winmisc.o winmiscs.o winnet.o winnpc.o winnps.o \
 		winpgnt.o winpgntc.o winsecur.o winselgui.o winutils.o \
 		-ladvapi32 -lcomdlg32 -lgdi32 -limm32 -lole32 -lshell32 \
-		-luser32
+		-luser32 -lws2_32
 
 plink.exe: agentf.o aqsync.o be_all_s.o be_misc.o callback.o clicons.o \
 		cmdline.o conf.o console.o cproxy.o ecc.o errsock.o ldisc.o \
@@ -183,7 +186,7 @@ plink.exe: agentf.o aqsync.o be_all_s.o be_misc.o callback.o clicons.o \
 		winplink.o winproxy.o winsecur.o winselcli.o winser.o \
 		winshare.o winstore.o wintime.o winucs.o winx11.o x11fwd.o \
 		-ladvapi32 -lcomdlg32 -lgdi32 -limm32 -lole32 -lshell32 \
-		-luser32
+		-luser32 -lws2_32
 
 pscp.exe: agentf.o aqsync.o be_misc.o be_ssh.o callback.o clicons.o \
 		cmdline.o conf.o console.o cproxy.o ecc.o errsock.o \
@@ -227,7 +230,7 @@ pscp.exe: agentf.o aqsync.o be_misc.o be_ssh.o callback.o clicons.o \
 		winnohlp.o winnoise.o winnojmp.o winnpc.o winnps.o \
 		winpgntc.o winproxy.o winsecur.o winselcli.o winsftp.o \
 		winshare.o winstore.o wintime.o winucs.o x11fwd.o -ladvapi32 \
-		-lcomdlg32 -lgdi32 -limm32 -lole32 -lshell32 -luser32
+		-lcomdlg32 -lgdi32 -limm32 -lole32 -lshell32 -luser32 -lws2_32
 
 psftp.exe: agentf.o aqsync.o be_misc.o be_ssh.o callback.o clicons.o \
 		cmdline.o conf.o console.o cproxy.o ecc.o errsock.o \
@@ -272,7 +275,7 @@ psftp.exe: agentf.o aqsync.o be_misc.o be_ssh.o callback.o clicons.o \
 		winnpc.o winnps.o winpgntc.o winproxy.o winsecur.o \
 		winselcli.o winsftp.o winshare.o winstore.o wintime.o \
 		winucs.o x11fwd.o -ladvapi32 -lcomdlg32 -lgdi32 -limm32 \
-		-lole32 -lshell32 -luser32
+		-lole32 -lshell32 -luser32 -lws2_32
 
 psocks.exe: be_misc.o callback.o conf.o console.o errsock.o logging.o \
 		marshal.o memory.o misc.o nocproxy.o norand.o portfwd.o \
@@ -287,7 +290,7 @@ psocks.exe: be_misc.o callback.o conf.o console.o errsock.o logging.o \
 		version.o wcwidth.o wincliloop.o wincons.o winhandl.o \
 		winhsock.o winmisc.o winmiscs.o winnet.o winnohlp.o \
 		winproxy.o winselcli.o winsocks.o -ladvapi32 -lcomdlg32 \
-		-lgdi32 -limm32 -lole32 -lshell32 -luser32
+		-lgdi32 -limm32 -lole32 -lshell32 -luser32 -lws2_32
 
 putty.exe: agentf.o aqsync.o be_all_s.o be_misc.o callback.o cmdline.o \
 		conf.o config.o cproxy.o dialog.o ecc.o errsock.o ldisc.o \
@@ -334,7 +337,7 @@ putty.exe: agentf.o aqsync.o be_all_s.o be_misc.o callback.o cmdline.o \
 		winnps.o winpgntc.o winprint.o winproxy.o winsecur.o \
 		winselgui.o winser.o winshare.o winstore.o wintime.o \
 		winucs.o winutils.o winx11.o x11fwd.o -ladvapi32 -lcomdlg32 \
-		-lgdi32 -limm32 -lole32 -lshell32 -luser32
+		-lgdi32 -limm32 -lole32 -lshell32 -luser32 -lws2_32
 
 puttygen.exe: conf.o ecc.o import.o marshal.o memory.o millerrabin.o misc.o \
 		mpint.o mpunsafe.o notiming.o pockle.o primecandidate.o \
@@ -357,7 +360,7 @@ puttygen.exe: conf.o ecc.o import.o marshal.o memory.o millerrabin.o misc.o \
 		tree234.o utils.o version.o wcwidth.o winctrls.o winhelp.o \
 		winmisc.o winmiscs.o winnoise.o winnojmp.o winpgen.o \
 		winsecur.o winstore.o wintime.o winutils.o -ladvapi32 \
-		-lcomdlg32 -lgdi32 -limm32 -lole32 -lshell32 -luser32
+		-lcomdlg32 -lgdi32 -limm32 -lole32 -lshell32 -luser32 -lws2_32
 
 puttytel.exe: be_misc.o be_nos_s.o callback.o cmdline.o conf.o config.o \
 		dialog.o errsock.o ldisc.o logging.o marshal.o memory.o \
@@ -380,7 +383,7 @@ puttytel.exe: be_misc.o be_nos_s.o callback.o cmdline.o conf.o config.o \
 		winjump.o winmisc.o winmiscs.o winnet.o winprint.o \
 		winproxy.o winsecur.o winselgui.o winser.o winstore.o \
 		wintime.o winucs.o winutils.o -ladvapi32 -lcomdlg32 -lgdi32 \
-		-limm32 -lole32 -lshell32 -luser32
+		-limm32 -lole32 -lshell32 -luser32 -lws2_32
 
 testcrypt.exe: ecc.o marshal.o memory.o millerrabin.o mpint.o mpunsafe.o \
 		pockle.o primecandidate.o smallprimes.o sshaes.o ssharcf.o \
