--- a/Src/bzip2-1.0.8/Makefile
+++ b/Src/bzip2-1.0.8/Makefile
@@ -21,7 +21,7 @@ RANLIB=ranlib
 LDFLAGS=
 
 BIGFILES=-D_FILE_OFFSET_BITS=64 -DWIN32
-CFLAGS=-Wall -Winline -O2 -g $(BIGFILES) -fno-ident -fno-stack-protector -fno-unwind-tables -fno-asynchronous-unwind-tables -march=i586 -Wl,--build-id=none -Wl,-s
+CFLAGS=-Wall -Winline -O2 -g $(BIGFILES) -fno-ident -fno-stack-protector -fno-unwind-tables -fno-asynchronous-unwind-tables -march=i586 -Wl,-shared-libgcc -Wl,--build-id=none -Wl,-s
 
 # Where you want it installed when you do 'make install'
 PREFIX=/usr/local
