--- a/Src/_setup/git/setup.ini
+++ b/Src/_setup/git/setup.ini
@@ -3,7 +3,7 @@ NumFields=4
 
 [Field 1]
 Type=label
-Text=By default PuTTY adds its directory to the system PATH.
+Text=By default Git adds its directory to the system PATH.
 Left=0
 Right=-1
 Top=0
@@ -11,7 +11,7 @@ Bottom=20
 
 [Field 2]
 Type=radiobutton
-Text=Add PuTTY to the system PATH for all users
+Text=Add Git to the system PATH for all users
 Left=0
 Right=-1
 Top=30
@@ -20,7 +20,7 @@ State=1
 
 [Field 3]
 Type=radiobutton
-Text=Add PuTTY to the system PATH for current user
+Text=Add Git to the system PATH for current user
 Left=0
 Right=-1
 Top=40
@@ -29,7 +29,7 @@ State=0
 
 [Field 4]
 Type=radiobutton
-Text=Do not add PuTTY to the system PATH
+Text=Do not add Git to the system PATH
 Left=0
 Right=-1
 Top=50
