--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /CD/SOFTWARE/COMPRESS/WRAR393/RARREG.KEY
+/CD/SOFTWARE/GRAPHICS/ACDS243/ACDSEE.REG
 /CD/SOFTWARE/GRAPHICS/AIPRO552/SERIAL.TXT
 /nt4soft.iso
