Patches for CMake.

--- a/Src/cmake-3.5.2/Source/kwsys/CMakeLists.txt
+++ b/Src/cmake-3.5.2/Source/kwsys/CMakeLists.txt
@@ -470,9 +470,10 @@ IF(KWSYS_USE_SystemInformation)
   ENDIF()
   IF(WIN32)
     INCLUDE(CheckSymbolExists)
-    SET(CMAKE_REQUIRED_LIBRARIES Psapi)
-    CHECK_SYMBOL_EXISTS(GetProcessMemoryInfo "windows.h;psapi.h" KWSYS_SYS_HAS_PSAPI)
-    UNSET(CMAKE_REQUIRED_LIBRARIES)
+    #SET(CMAKE_REQUIRED_LIBRARIES Psapi)
+    #CHECK_SYMBOL_EXISTS(GetProcessMemoryInfo "windows.h;psapi.h" KWSYS_SYS_HAS_PSAPI)
+    #UNSET(CMAKE_REQUIRED_LIBRARIES)
+    SET(KWSYS_SYS_HAS_PSAPI FALSE)
     IF(KWSYS_SYS_HAS_PSAPI)
       SET_PROPERTY(SOURCE SystemInformation.cxx APPEND PROPERTY
         COMPILE_DEFINITIONS KWSYS_SYS_HAS_PSAPI=1)
